--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,17 @@
 body {
     font-family: "Roboto";
     position: relative;
-    color: black;
+    color: var(--main-header-color);
+    background: var(--main-bg-color);
+}
+
+a {
+    color: var(--white);
+}
+
+a:hover {
+    text-decoration: none;
+    color: var(--white);
 }
 
 h1 {
@@ -12,6 +22,7 @@ h1 {
     font-weight: 400;
     letter-spacing: -2px;
     margin-bottom: 1.5rem;
+
 }
 
 h2 {
@@ -39,11 +50,12 @@ h5 {
 }
 
 p {
-    color: #8c8c8c;
+    color: var(--main-paragraph-color);
+    font-size: var(--main-small-font-size);
 }
 
 .btn {
-    font-size: 12px;
+    font-size: var(--btn-font-size);
     font-weight: 400;
     text-transform: uppercase;
     padding: 0.375rem 1.35rem;
@@ -52,7 +64,7 @@ p {
 
 .btn-primary {
     border-radius: 3px;
-    background-color: black;
+    background-color: var(--black);
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.2);
     font-weight: 500;
     padding: 0.6rem 2rem;
@@ -65,9 +77,8 @@ p {
 .btn-primary:not([disabled]):not(.disabled).active,
 .btn-primary:not([disabled]):not(.disabled):active,
 .show>.btn-primary.dropdown-toggle {
-    background-color: #e5003c;
+    background-color: var(--main-red-color);
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.3);
-    color: #FFF;
     cursor: pointer;
 }
 
@@ -84,21 +95,9 @@ p {
     background-color: rgba(0, 0, 0, 0.85);
 }
 
-.nav-menu.is-scrolling,
-.nav-menu.menu-is-open {
-    background-color: rgba(0, 0, 0, 0.85);
-    /* background: rgb(0,212,255); */
-    background: linear-gradient(90deg, rgba(0,212,255,1) 0%, rgba(9,9,9,0.7987570028011204) 0%, rgba(2,0,36,1) 100%, rgba(27,0,36,0.8743872549019608) 100%);
-    -webkit-box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 5px 23px 0px rgba(0, 0, 0, 0.1);
-}
-
 .nav-menu.is-scrolling {
     padding: 0;
 }
-
-a
 
 .navbar-nav .nav-link {
     position: relative;
@@ -114,7 +113,7 @@ a
     }
     .navbar-nav>.nav-item>.nav-link.active:after {
         content: "";
-        border-bottom: 2px solid #e60508;
+        border-bottom: 2px solid var(--main-red-color);
         left: 1rem;
         right: 1rem;
         bottom: 5px;
@@ -146,9 +145,9 @@ header {
 
 .gradient-fill:before {
     color: #fc0700;
-    background: -moz-linear-gradient(top, #000000 0%, #fc0003 100%);
-    background: -webkit-linear-gradient(top, #000000 0%, #fc0003 100%);
-    background: linear-gradient(to bottom,  #000000 0%, #fc0003 100%);
+    background: -moz-linear-gradient(top, var(--black) 0%, #fc0003 var(--full-dimension));
+    background: -webkit-linear-gradient(top, var(--black) 0%, #fc0003 var(--full-dimension));
+    background: linear-gradient(to bottom,  var(--black) 0%, #fc0003 var(--full-dimension));
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -161,7 +160,7 @@ header {
     width: 70px;
     border-radius: 3px;
     margin-bottom: 1.5rem;
-    background-color: #FFF;
+    background-color: var(--white);
 }
 
 .nav-tabs {
@@ -172,17 +171,17 @@ header {
 .nav-tabs .nav-link:focus,
 .nav-tabs .nav-link:hover {
     padding: 1rem 1rem;
-    border-color: #faf6fb #faf6fb #FFF;
-    font-size: 19px;
-    color: #e60508;
+    border-color: #faf6fb #faf6fb  var(--white);;
+    font-size: var(--main-small-font-size);
+    color: var(--main-red-color);
     background: #f5eff7;
 }
 
 .nav-tabs .nav-link.active {
-    background: #FFF;
+    background: var(--white);
     border-top-width: 3px;
-    border-color: #e60508 #faf6fb #FFF;
-    color: #e60508;
+    border-color: var(--main-red-color) #faf6fb var(--white);
+    color: var(--main-red-color);
 }
 .card-decks {
      display: flex;
@@ -191,9 +190,10 @@ header {
 /*  PRICING
 ----------------------*/
 .blockquote {
-    color: #8c8c8c;
+    color: var(--main-paragraph-color);
     font-weight: 400;
     padding: 0 15px;
+    text-align: center;
 }
 
 @media (max-width:992px) {
@@ -207,7 +207,6 @@ header {
 }
 
 .card.pricing {
-    border: 1px solid #f1eef1;
 }
 
 .card.pricing .card-head {
@@ -231,15 +230,11 @@ header {
 .card.pricing .list-group-item {
     border: 0;
     text-align: center;
-    color: #8c8c8c;
+    color: var(--main-paragraph-color);
     padding: 1.05rem 1.25rem;
-    font-size: 20px;
+    font-size: var(--main-small-font-size);
 }
 
 .card.pricing .card-body {
     padding:  0  1.75rem  1.75rem 1.75rem;
-}
-
-.btn {
-    font-size: 18px;
 }
