--- a/detaliiCurs/css/detalii-curs.css
+++ b/detaliiCurs/css/detalii-curs.css
@@ -1,6 +1,6 @@
 /* Header start */
 .header-detalii-curs {
-    background-image: url("../../images/headerbk.jpg");
+    background-image: url("../../img/webdev.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom:25px;
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-bottom: var(--main-border-container);
 }
 
 .detalii-curs-titlu{
@@ -22,17 +23,15 @@
 }
 
 .enroll-header-btn{
-    font-size: 15px;
-}
-.enroll-header-btn a {
-    color: #FFF;
+    background: var(--main-red-color);
+    font-size: var(--btn-font-size);
 }
 
 .enroll-header-btn:hover {
-    background: #e5003c;
+    background: var(--main-red-color);
     cursor: pointer;
     border: 1px solid transparent;
-    font-size: 16px;
+    font-size: var(--btn-font-size-hover);
 }
 
 .container-detalii-curs {
@@ -46,12 +45,12 @@
 
 /* Info curs container start */
 .curs-container {
-    width: 100%;
-    background: #f9f9f9;
+    width: var(--full-dimension);
     padding-bottom:40px;
+    border-bottom: var(--main-border-container);
 }
 .info-curs-container {
-    width: 70%;
+    width: var(--main-content-width);
     margin: auto;
 }
 
@@ -59,10 +58,6 @@
     padding-top: 55px;
     padding-bottom: 50px;
     height: auto;
-}
-
-.detalii-curs-motto {
-    color: black;
 }
 
 .info-title h2{
@@ -79,22 +74,20 @@
 
 .informatii-curs-sumar{
     width: 32%;
-    -webkit-box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68);
+    /* -webkit-box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68);
     -moz-box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68);
-    box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68);
+    box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68); */
     border-radius: 3%;
-    background: #fff;
-    border: 1px solid #f1eef1;
+    background: var(--card-bk-color);
+    /* border: 1px solid #f1eef1; */
 }
 
 .informatii-curs-sumar h3 {
     text-align: center;
-    color: black;
     padding:20px 0;
 }
 
 .informatii-curs-row{
-    /* font size-font-style */
     display: flex;
 }
 
@@ -102,6 +95,10 @@
     font-weight: bold;
     width: 30%;
     padding-left: 10%;
+}
+
+.row-first-elem p {
+    color: var(--main-header-color);
 }
 
 .row-second-elem {
@@ -118,7 +115,7 @@
 
 /* DESCRIERE CURS START */
 .descriere-curs{
-    width: 60%;
+    width: 62%;
 }
 
 .descriere-curs h4{
@@ -130,7 +127,6 @@
 }
 
 .descriere-cui-se-adreseaza h4{
-    color: black;
     padding-bottom: 10px;
 }
 
@@ -140,34 +136,36 @@
 
 
 /* PROGRAMA CURS START */
+.programa-curs-container {
+    background-image: url('../../img/header1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-bottom: var(--main-border-container);
+}
 
 .programa-curs{
     margin: auto;
-    width: 70%;
+    width: var(--main-content-width);
     justify-content: space-between;
     padding-bottom: 50px;
+      
 }
 
 .detalii-programa {
-    width: 100%;
+    width: var(--full-dimension);
     display: flex;
     justify-content: space-between;
 }
 
 .programa-curs-row{
-    width: 25%;
-    color: black;
-    -webkit-box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68);
-    -moz-box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68);
-    box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68);
+    width: 30%;
     border-radius: 3%;
-    border: 1px solid #f1eef1;
+    background: var(--card-bk-color);
 }
 
 .programa-curs-header {
     padding-top: 20px;
     display: flex;
-    color:black;
     width:80%;
     margin: auto;
     justify-content: center;
@@ -176,7 +174,6 @@
 .programa-curs-header h4{
     padding: 20px 0;
     font-weight: bold;
-    color: black;
 }
 
 .programa-curs-header i {
@@ -213,24 +210,20 @@
 /* DESCRIERE TRAINER START */
 .trainer-section{
     position: relative;
-    background:black;
-    width: 100%;
-    border-bottom: 2px solid lightgray;
+    width: var(--full-dimension);
+    border-bottom: var(--main-border-container);
     padding-bottom: 70px;
 }
 
 .descriere-trainer {
-    width:70%;
+    width:var(--main-content-width);
     margin: auto;
     color: white;
 }
 
-.descriere-trainer h2,h3,h4{
-    color:white;
-}
 
 .info-title span{
-    color: #e5003c
+    color: var(--main-red-color)
 }
 
 .trainer-row {
@@ -245,8 +238,7 @@
 
 .trainer-delimitator {
     height: 1px;
-    width: 100%;
-    background: #959094;
+    width: var(--full-dimension);
     position: absolute;
     top:57%;
     left: 0;
@@ -256,10 +248,6 @@
 
 .trainer-description{
     width: 60%;
-}
-
-.trainer-description p{
-    color: #959094
 }
 
 .trainer-image-container{
@@ -302,10 +290,10 @@
     text-align: center;
     padding: 15% 0 20px 0;
     font-weight: bold;
+    color: var(--black);
 }
 
 .marketing-section-part1 h3{
-    color: black;
     text-align: center;
     padding: 40px 0 20px 0;
 }
@@ -331,18 +319,21 @@
 
 .inscriere-curs-section {
     padding-bottom: 50px;
-    background: #f2f2f2;
+}
+.curs-container {
+  
 }
 
 .inscriere-curs-container{
     display: flex;
-    width: 70%;
+    width: var(--main-content-width);
     margin: auto;
 }
 
 .inscriere-marketing-section{
-    background-image: url("../../images/bau.jpg");
+    background-image: url("../../img/curs.png");
     background-size: cover; 
+    border-radius: 2%;
     width:49%;
     background-color: lightgrey;
     height:auto;
@@ -376,17 +367,18 @@
 
 form label{
     font-weight:bold;
-    font-size: 20px;
+    font-size: var(--main-small-font-size);
 }
 
 .enroll-btn {
-    background-color: black!important;
-    font-size: 20px;
+    font-size: var(--btn-font-size);
+    background: var(--main-red-color)!important;
 }
 
 .enroll-btn:hover {
+    font-size: var(--btn-font-size-hover);
     cursor: pointer;
-    background-color: #e5003c!important;
+    background-color: var(--main-red-color);
 }
 /* INSCRIERE CURS END */
 
@@ -394,13 +386,12 @@ form label{
 
 .footer {
     padding-top: 40px;
-    background-color: black;
+    background-color: var(--black);
 }
 
 .footer-container {
-    width: 70%;
+    width: var(--main-content-width);
     margin: auto;
-    color: white;
 }
 
 .footer-row {
@@ -410,16 +401,13 @@ form label{
 }
 
 .footer label {
-    font-size: 20px;
+    color: var(--main-header-color);
+    font-size: var(--main-small-font-size);
 }
 
 .social-media, .contact-form {
     width: 45%;
     padding: 0 15px;
-}
-
-.social-media p{
-    font-size: 20px;
 }
 
 .contact-form textarea{
@@ -428,11 +416,11 @@ form label{
 
 
 .copyright-message {
-    width: 100%;
+    width: var(--full-dimension);
     margin: auto;
 }
 .copyright-message a{
-    color: #e5003c;
+    color: var(--main-red-color);
 }
 
 .social-media-paragraph{
@@ -447,9 +435,9 @@ form label{
 .submit-button-footer {
     height: 45px;
     color: white;
-    font-size: 17px!important;
+    font-size: var(--btn-font-size);
     width: 50%;
-    background-color: #e5003c!important;
+    background-color: var(--main-red-color);
     float: right;
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.2);
     text-transform: uppercase;
@@ -457,12 +445,59 @@ form label{
 
 .submit-button-footer:hover {
     cursor: pointer;
-    background-color: #be0b23e5!important;
+    background-color: #f1144f;
     transition: all 0.3s ease;
+    font-size: var(--btn-font-size-hover);
 }
 
 .footer-links {
     margin: auto;
+}
+
+@media (max-width:992px) {
+    .h1 {
+        font-size: 40px;
+    }
+
+   .footer-row {
+       flex-direction: column;
+   }
+
+   .footer-container {
+       width: 100%;
+       margin: 0;
+   }
+
+   .social-media {
+       width: 100%;
+       margin: 0 auto;
+   }
+
+   .social-media h1 {
+       text-align: center;
+   }
+
+   .copyright-message {
+       font-size: 55%;
+   }
+
+   .contact-form {
+       width: 100%;
+   }
+
+   .contact-form h1 {
+       text-align: center;
+   }
+}
+
+.red {
+    color: var(--main-red-color);
+    padding-bottom: 0;
+}
+
+.green {
+    color: #52c41a;
+    padding-bottom: 0;
 }
 
 /* FOOTER END */
