--- a/detaliiCurs/views/detalii-curs.html
+++ b/detaliiCurs/views/detalii-curs.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../css/detalii-curs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker3.css">
     <!-- Main css -->
+    <link rel="stylesheet" href="../../css/constants.css">
     <link href="../../css/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="../../images/partea_de_susLogo.png"/>
 </head>
@@ -102,11 +103,10 @@
                 <p class="row-second-elem pret-curs-detalii"></p>
             </div>
             <div class="informatii-curs-row">
-                    <div class="row-first-elem">
-                            <p>Traineri</p>
-                        </div>
+                <div class="row-first-elem">
+                        <p>Traineri</p>
+                    </div>
                 <div class="row-second-elem row-second-elem-traineri">
-                    
                 </div>
             </div>
         </div>
@@ -128,7 +128,7 @@
 
 
 <!-- PROGRAMA CURS START -->
-
+<div class="programa-curs-container">
 <section class="programa-curs">
     <div class="info-title" >
         <h2>Programa curs</h2>
@@ -180,6 +180,7 @@
     </div>
     
 </section>
+</div>
 
 <!-- PROGRAMA CURS ENDS -->
 
@@ -228,58 +229,55 @@
                         <div class="row input-space">
                             <div class="col-xs-6 col-md-6">
                                 <label for="firstname">Prenume</label>
-                                <input type="text" name="firstname" value="" class="form-control input-lg" required placeholder="First Name"/>
+                                <input type="text" name="firstname" value="" class="form-control input-lg first-name" required placeholder="First Name"/>
+                                <p class="firstname-error-msg"></p>
                             </div>
                             <div class="col-xs-6 col-md-6">
                                     <label for="lastname">Nume</label>
-                                <input type="text" name="lastname" value="" class="form-control input-lg" required placeholder="Last Name"/>    
+                                <input type="text" name="lastname" value="" class="form-control input-lg last-name" required placeholder="Last Name"/>    
+                                <p class="lastname-error-msg"></p>
                             </div>
                         </div>
     
                         <label for="date">Data nasterii*</label>
-                        <div class="input-group date input-space" class="datepicker" data-provide="datepicker">
+                        <div class="input-group date input-space" class="datepicker date-input" data-provide="datepicker">
                             <input type="text" class="input-space form-control input-lg" placeholder="09.12.2019" required>
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar" style="color:black"></i>
                             </div>
+                            <p class="date-error-msg"></p>
                         </div>
                         
                         <label for="date">Cunostinte in IT</label>
-                        <textarea required type="text" name="date" value="" class="input-space form-control input-lg" placeholder="Descrie in 2-3 randuri cunostintele tale in IT"/></textarea>
-                        
+                        <textarea required type="text" name="date" value="" class="input-space form-control input-lg it-knowledge" placeholder="Descrie in 2-3 randuri cunostintele tale in IT"/></textarea>
+                        <p class="knowledge-error-msg"></p>
                         <div class="row input-space">
                             <div class="col-xs-6 col-md-6">
                                 <label for="email">Email</label>
-                                <input required type="text" name="email" value="" class="form-control input-lg" placeholder="Your Email"/>
+                                <input required type="text" name="email" value="" class="form-control input-lg email" placeholder="Your Email"/>
+                                <p class="email-error-msg"></p>
                             </div>
                             <div class="col-xs-6 col-md-6">
                                 <label for="phone">Telefon</label>
-                                <input required type="tel"  pattern="[0-9]{10}" name="phone" value="" class="form-control input-lg" placeholder="07439228843"/>    
+                                <input required type="tel"  pattern="[0-9]{10}" name="phone" value="" class="form-control input-lg phone" placeholder="07439228843"/>    
+                                <p class="phone-error-msg"></p>
                             </div>
                         </div>
-                                            <label for="date">Industria din care provii</label>
-                        <input type="text" name="date" value="" class="input-space form-control input-lg" required placeholder="Inginerie/Psihologie"/>
-                        
+                        <label for="date">Industria din care provii</label>
+                        <input type="text" name="date" value="" class="input-space form-control input-lg industry" required placeholder="Inginerie/Psihologie"/>
+                        <p class="industry-error-msg"></p>
                         <label for="month">Nivel limba engleza</label>
-                        <select name="month" class = "form-control input-lg input-space" required>
+                        <select name="month" class = "form-control input-lg input-space english-level" required>
                                 <option value="incepator">Incepator</option>
                                 <option value="mediu">Mediu</option>
                                 <option value="avansat">Avansat</option>
                         </select>
-    
-                        <!-- <label for="marketing-source">De unde ai auzit de noi?</label>
-                        <select name="month" class = "form-control input-lg input-space" required>
-                                <option value="internet">Internet</option>
-                                <option value="prieteni">Prieteni/Cunostinte</option>
-                                <option value="social-media">Social Media</option>
-                                <option value="meetup">Meetup-uri</option>
-                                <option value="conferinte">Conferinte</option>
-                        </select> -->
-    
+
                         <div class="termeni-conditii">
-                            <input type="checkbox" name="date" value="" class="input-space form-control input-lg checkbox" required/>
+                            <input type="checkbox" class="input-space form-control input-lg checkbox" required/>
                             <span>Accept termenii si conditiile</span>        
                         </div>
+                         <p class="message-after-enroll"></p>
                         <button class="btn btn-lg btn-primary btn-block enroll-btn" type="submit">Ma inscriu</button>
                     </div>
                 </form>
@@ -303,20 +301,20 @@
                 <div class="social-media-icons">
 
                 </div>
-                <p>Adresa</p>
             </div>
 
             <div class="contact-form">
                 <h1>Email us:</h1>
                 <label for="email">Email</label>
                 <input type="text" name="email" value="" class="form-control input-lg input-space" placeholder="Your Email"/>
+                <p class="email-after-submit"></p>
 
                 <label for="mesaj">Scrie-ne un mesaj</label>
                 <textarea type="text" name="mesaj" value="" class="input-space form-control input-lg" placeholder="Mesaj..."/></textarea>
+                <p class="message-after-submit"></p>
                 <button class="btn submit-button-footer">Submit</button>
             </div>
         </div>
-
 
         <p class="copyright-message text-center"><small>COPYRIGHT © 2017. ALL RIGHTS RESERVED BY <a href="">SPEAK PROGRAMMING</a></small></p>
     </div>
@@ -331,8 +329,5 @@
     <script src="../../js/createBodyRequest.js"></script>
     <script src="../js/detalii-curs-service.js"></script>
     <script src="../js/detalii-curs.js"></script>
-
-
 </body>
-
 </html>
