--- a/home-page/home.css
+++ b/home-page/home.css
@@ -1,33 +1,23 @@
 .card{
-    -webkit-box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68);
-    -moz-box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68);
-    box-shadow: 2px 3px 18px -2px rgba(186,186,186,0.68);
+    background: var(--card-bk-color);
 }
-/* insert focus from js
-.card-focus {
-    background-color: rgb(255, 255, 255);
-    transform: translateZ(0px);
-    will-change: transform;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 0.1rem 0.3rem, rgba(0, 0, 0, 0.05) 0px 0.1rem 0.2rem, rgba(0, 0, 0, 0.05) 0px 0.5rem 1.5rem;
-    transition: all 0.25s ease-out 0s;
-    border-radius: 0.3rem;
-} */
 
 .courseDetails {
-    color: white!important;
+    background: var(--main-red-color)!important;
 }
 
 .courseDetails:hover {
     cursor: pointer;
+    background: var(--btn-font-size);
 }
 
 .nav-bar-container {
-    width: 70%;
+    width: var(--main-content-width);
     margin:0 auto;
 }
 
 .course-image-container {
-    width: 100%;
+    width: var(--full-dimension);
     height: 37%;
     content: url("../images/headerbk.jpg");
 }
@@ -37,110 +27,192 @@
 }
 
 .section-home-trainer{
-    border-bottom:1px solid #dad9d9;
-    background: #f2f2f2;
+    border-bottom: var(--main-border-container);
+    border-top: var(--main-border-container);
+    background: #181818;
+    margin-top: -1px;
 }
 
-
 .section-home-curs {
-    border-bottom:1px solid #dad9d9;
+    background: #181818;
+    border-bottom: var(--main-border-container);
 }
 
 .home-header {
-    border-bottom:1px solid #dad9d9;
+    border-bottom: var(--main-border-container);
     height: 960px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    opacity: 0.9
+}
+
+.linkedin-icon-container{
+    color: var(--main-header-color);
+    font-size: 40px;
+    width:9%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 4%;
 }
 
 .take-action-message {
     margin-top: 30px;
-    color:black;
+    color:white;
 }
 
 .take-action-message p{
-    font-size: 25px;
-    color:black!important;
+    font-size: var(--main-small-font-size);
+    color:white!important;
 }
 
 .enroll-header-btn {
-    background: black;
+    background: var(--main-red-color);
+}
+
+.enroll-header-btn:hover {
+    font-size: var(--btn-font-size-hover);
+}
+
+.section-about-us {
+    height: auto;
+}
+
+.why-us-header {
+    padding: 50px 0 30px 0;
 }
 
 .btn-course {
     border-radius: 3px;
-    background-color: black;
+    background-color: var(--black);
     border: 0;
     font-weight: 500;
     color: #fff;
 }
 
 .btn-course:hover {
-    background-color: black;
+    background-color: var(--black);
     color: #fff;
-    background-color: #e5003c;
+    background-color: var(--main-red-color);
+    font-size: var(--btn-font-size-hover);
 }
 
 .curs-title {
-    color: #bf0039;
-    font-size: 19px;
+    color: var(--main-red-color);
+    font-size: var(--main-small-font-size);
 }
-/*Start css despre noi*/
+
 .section-despre-noi {
     border-bottom: 1px solid #dad9d9;
-    background-image: url("../images/banner.jpg");
-    height: auto;
-}
-.section-despre-noi-flex{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-.section-despre-noi-content{
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 0;
-    height: 100%;
-    width: 100%;
-
-}
-.despre-noi-div-descriere{
-    margin-right: 40px;
-    color:black;
-    width: 300px;
-}
-.despre-noi-text-descriere{
-    text-align: left;
-    height: 250px;
-}
-.margin-div{
-    border-right: 4px solid rgba(183, 173, 173, 0.31);
-    height: 250px;
 }
 
-
-@media screen and (max-width: 650px) {
-    .section-despre-noi-flex {
-        display: block;
-    }
-    .margin-div{
-        border-right: 0;
-    }
-}
- /*emd css despre noi*/
 .list-group {
     padding-bottom: 40px;
+}
+
+.list-group-item {
+    background: var(--card-bk-color);
 }
 
 .btn-light {
     border-radius: 3px;
     background: #FFF;
     box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.26);
-    font-size: 14px;
+    font-size: var(--btn-font-size);
     font-weight: 500;
     color: #e60508;
     margin: 0.5rem;
     padding: 0.7rem 1.6rem;
     line-height: 1.8;
 }
+
+.home-header {
+    background-image: url('../images/banner.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: transparent;
+}
+
+
+/*Start css despre noi*/
+.section-despre-noi {
+    border-bottom: 1px solid #dad9d9;
+    background-image: url("../img/header1.jpg");
+    height: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+ .section-despre-noi-flex{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 50px;
+    width: 60%;
+    margin: 0 auto;
+} 
+
+.despre-noi-div-descriere {
+    width: 32%;
+    border-right: 2px solid grey;
+    padding:0 2%;
+}
+
+
+.despre-noi-div-descriere h3{
+    text-align: center;
+    padding: 20px 0;
+}
+
+.despre-noi-div-descriere-last {
+    border: none;
+}
+
+.why-us-icon {
+    font-size: 60px!important;
+    width: 100%;
+    color: var(--main-red-color);
+    text-align: center;
+}
+
+.section-despre-noi-content {
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+@media (max-width:992px) {
+    .home-header {
+        height: 680px;
+    }
+
+    .h1 {
+        font-size: 40px!important;
+    }
+
+    .home-main-header, .why-us-header, .social-media h1, .contact-form h1 {
+        font-size: 40px
+    }
+
+    .price {
+        font-size:35px;
+    }
+
+    .list-group {
+        padding-bottom: 20px;
+    }
+
+    .course {
+        width: 100%;
+    }
+
+    .section-despre-noi-flex {
+        flex-direction: column;
+        width:90%;
+    }
+
+    .despre-noi-div-descriere {
+        width: 100%;
+        margin:0;
+        border: none;
+    }
+    
+}
+
